Fix bus list z-index

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ nav {
   width: 375px;
   margin: 0 auto;
   transform: translateY(292px);
-  z-index: -2;
+  z-index: -1;
 }
 
 /*Styling for all bus arrival list items*/
